# learn-aws-rust

./: README.md
.github/workflows/: rust_ci.yml
cdk/: .env.example  .gitignore  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
rust_lambda/: Cargo.toml  README.md
rust_lambda/hello/: .gitignore  Cargo.toml
rust_lambda/hello/src/: main.rs
rust_lambda/scraper/: Cargo.toml
rust_lambda/scraper/src/: main.rs  scraping.rs
rust_lambda/src/: lib.rs  main.rs
