[package]
name = "rust_lambda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello_lambda"
path = "src/hello_lambda/main.rs"

# [[bin]]
# name = "lambda_function2"
# path = "src/lambda_function2/main.rs"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
chrono = "0.4.28"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde="1.0.130"
serde_json="1.0.68"
serde_derive="1.0.130"
maxminddb = "0.23.0"



