[package]
name = "rust_lambda_scraper"
version = "0.1.0"
edition = "2021"
#default-run = "lambda_scraper"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
#chrono = "0.4.28"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde="1.0.130"
serde_json="1.0.68"
serde_derive="1.0.130"
#maxminddb = "0.23.0"
url = "2.4.1"
reqwest = { version="0.11.20", default-features = false, features = ["json", "rustls-tls"]}
select = "0.6.0"



